--- a/src/main/resources/templates/bonddia/main-bonddia.html
+++ b/src/main/resources/templates/bonddia/main-bonddia.html
@@ -7,29 +7,45 @@
     <link rel="stylesheet" href="/calculadoras/css/font-awesome.css"/>
     <link rel="stylesheet" href="/calculadoras/css/smart-forms.css"/>
     <link rel="stylesheet" href="/calculadoras/css/main-styles.css"/>
+
+    <link rel='stylesheet' href='/calculadoras/css/jquery-ui.css'/>
+
+    <style>
+    #modalGrafica {
+      top:10%;
+      left:47%;
+      outline: none;
+    }
+    </style>
+
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-blue navbar-blue fixed-top" style="background-color:#1C83C6;">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/cetes">CETES</a>
+    <nav class="navbar navbar-expand-sm bg-blue navbar-blue fixed-top" style="background-color:#FFFFFF;">
+      <ul class="nav nav-pills mb-3 ul" id="myPills">
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="pill" href="/calculadoras/cetes" role="tab" aria-controls="pillsCetes"
+          aria-selected="true">CETES</a>
         </li>
-        <li class="nav-item active">
-          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/bondes">BONDES</a>
+        <li class="nav-item">
+          <a class="nav-link"  data-toggle="pill" href="/calculadoras/bonos" role="tab" aria-controls="pillsBonos"
+          aria-selected="false">BONOS</a>
         </li>
-        <li class="nav-item active">
-          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/bonos">BONOS</a>
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="pill" href="/calculadoras/bondes" role="tab" aria-controls="pillsBondes"
+          aria-selected="false">BONDES</a>
         </li>
-        <li class="nav-item active">
-          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/udibonos">UDIBONOS</a>
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="pill" href="/calculadoras/udibonos" role="tab" aria-controls="pillsUdibonos"
+          aria-selected="false">UDIBONOS</a>
         </li>
-        <li class="nav-item active">
-          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/bonddia">BONDDIA</a>
+        <li class="nav-item">
+          <a class="nav-link active" data-toggle="pill" href="/calculadoras/bonddia" role="tab" aria-controls="pillsBonddia"
+          aria-selected="true">BONDDIA</a>
         </li>
       </ul>
     </nav>
 
-    <div class="container-fluid" style="margin-top:50px">
+    <div class="container-fluid" style="margin-top:60px">
       <div class="row smart-forms">
         <div class="col-2 seccion">
           <form style="margin-top: 20px;" id="form-bonddia">
@@ -75,14 +91,14 @@
             </div>
               <div class="row row-cetes">
                 <div class="col-4"><span class="label-calc pull-right">Bonddia:</span></div>
-                <div class="col-3 col-result"><span class="label-resultado">{{ titulosbonddia }}</span></div>
+                <div class="col-3 col-result"><span class="label-resultado pull-right">{{ titulosbonddia }}</span></div>
                 <div class="col-3 col-result"><span class="label-resultado pull-right">{{ tasa }}%</span></div>
               </div>
               <div class="line"></div>
               <br/>
               <div class="row row-cetes">
                 <div class="col-1"><img src="/calculadoras/images/question.png" alt="" data-toggle="tooltip" data-placement="right" title="Al no alcanzar para otro titulo en cetes, el remanente se invierte en el fondo diario Bonddia y genera intereses"/> </div>
-                <div class="col-6"><span class="label-calc pull-right">Inversion Bonddia:</span></div>
+                <div class="col-6"><span class="label-calc pull-right">Inversión Bonddia:</span></div>
                 <div class="col-4 col-result"><span class="label-resultado">$ {{ inversionInicial }}</span></div>
               </div>
               <div class="line"></div>
@@ -123,11 +139,15 @@
     </div>
   </body>
   <script src="/calculadoras/js/jquery-3.2.1.js" charset="utf-8"></script>
+  <script src="/calculadoras/js/jquery-ui.min.js" charset="utf-8"></script>
   <script src="/calculadoras/js/bootstrap.js" charset="utf-8"></script>
   <script src="/calculadoras/js/util.js" charset="utf-8"></script>
   <script src="/calculadoras/js/vue.js" charset="utf-8"></script>
   <script src="/calculadoras/js/highcharts.js" charset="utf-8"></script>
   <script src="/calculadoras/js/bonddia.js" charset="utf-8"></script>
+
+  <script src="/calculadoras/js/index.js" charset="utf-8"></script>
+
   <script >
     (function($, undefined) {
 
@@ -172,5 +192,15 @@
 
 	});
 })(jQuery);
+
+$('#myPills a').click(function (e) {
+
+  var url = $(this).attr("href");
+  //$(this).load(url);
+  window.location.replace(url);
+
+
+});
+
    </script>
 </html>
