--- a/src/main/resources/templates/cetes/main-cetes_calculo_normal.html
+++ b/src/main/resources/templates/cetes/main-cetes_calculo_normal.html
@@ -16,42 +16,35 @@
       left:47%;
       outline: none;
     }
-    </style>
+  </style>
+
+  <style type="text/css">
+  .mobileHide { display: inline; }
+
+  /* Smartphone Portrait and Landscape */
+  @media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 480px){
+     .mobileHide { display: none;}
+  }
+</style>
 
   </head>
+
+
+
   <body>
-    <nav class="navbar navbar-expand-sm bg-blue navbar-blue fixed-top" style="background-color:#FFFFFF;">
-      <ul class="nav nav-pills mb-3 ul" id="myPills">
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="pill" href="/calculadoras/cetes" role="tab" aria-controls="pillsCetes"
-          aria-selected="true">CETES</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"  data-toggle="pill" href="/calculadoras/bonos" role="tab" aria-controls="pillsBonos"
-          aria-selected="false">BONOS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" data-toggle="pill" href="/calculadoras/bondes" role="tab" aria-controls="pillsBondes"
-          aria-selected="false">BONDES</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="pill" href="/calculadoras/udibonos" role="tab" aria-controls="pillsUdibonos"
-          aria-selected="false">UDIBONOS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="pill" href="/calculadoras/bonddia" role="tab" aria-controls="pillsBonddia"
-          aria-selected="true">BONDDIA</a>
-        </li>
-      </ul>
-    </nav>
+
+
+
 
     <div class="container-fluid" style="margin-top:60px">
       <div class="row smart-forms">
         <div class="col-2 seccion">
-          <form style="margin-top: 20px;" id="form-bondes">
+          <form style="margin-top: 20px;" id="form-cetes">
             <div class="spacer-b30">
               <div class="tagline" style="">
-                <span>Bondes</span>
+                <span>Cetes</span>
               </div>
             </div>
             <div class="form-group">
@@ -68,22 +61,71 @@
               <div class="field select">
                 <select id="plazo" name="plazo">
                   <option value="">Seleccione un plazo</option>
-                  <option value="12">1 año</option>
-                  <option value="60">5 años</option>
+                  <option value="28">28</option>
+                  <option value="91">91</option>
+                  <option value="182">182</option>
+                  <option value="360">360</option>
                 </select>
                 <small id="errorPlazo" class="form-text text-red" style="display: none;">El plazo es un campo requerido.</small>
                 <i class="arrow"></i>
               </div>
             </div>
             <div class="row justify-content-center" style="margin-bottom: 3rem; margin-top: 3rem;">
-              <input type="button" name="" value="Calcular" class="button btn-primary" v-on:click="calcular"/>
+              <input type="button" name="" value="Calcular"  class="button btn-primary" v-on:click="calcular"/>
             </div>
           </form>
         </div>
+
+
+
+
+
         <div class="col seccion">
-          <!-- <div id="tableResult" style="margin-top: 25px; margin-bottom: 25px;"></div> -->
+
+
+          <div class="row" id="titulo28" style="display:none">
+            <div class="col-3 resultado-calc-div">
+              <div class="div-titulos">
+                <span class="titulos-comparar">CETES 28</span>
+               </div>
+            </div>
+          </div>
+
+          <div class="row" id="titulo91" style="display:none">
+            <div class="col-3 resultado-calc-div">
+              <div class="div-titulos">
+                <span class="titulos-comparar">CETES 91</span>
+               </div>
+            </div>
+          </div>
+
+          <div class="row" id="titulo182" style="display:none">
+            <div class="col-3 resultado-calc-div">
+              <div class="div-titulos">
+                <span class="titulos-comparar">CETES 182</span>
+               </div>
+            </div>
+          </div>
+
+          <div class="row" id="titulo360" style="display:none">
+            <div class="col-3 resultado-calc-div">
+              <div class="div-titulos">
+                <span class="titulos-comparar">CETES 360</span>
+               </div>
+            </div>
+          </div>
+
+
+
           <div class="row">
             <div style="display:none;" id="result-1" class="col-3 resultado-calc-div">
+
+              <div class="row row-cetes">
+                <div class="col-6"><span class="label-resultado">Monto invertido:</span></div>
+                <div class="col-4 col-result"><span class="label-resultado">$ {{ montoInicial }}</span></div>
+                <div class="col-1"><img src="/calculadoras/images/white.png" alt="" data-toggle="tooltip" data-placement="right" title="Capital con el que se realiza la inversión inicial en cetes"/> </div>
+              </div>
+
               <div class="row row-cetes">
                 <div class="col-4"></div>
                 <div class="col-3"><span class="label-calc">Titulos</span></div>
@@ -95,26 +137,26 @@
                 <div class="col-3 col-result"><span class="label-resultado pull-right">{{ tasaBrutaCetes }}%</span></div>
               </div>
               <div class="row row-cetes">
-                <div class="col-4"><span class="label-calc pull-right">Bondes:</span></div>
-                <div class="col-3 col-result"><span class="label-resultado pull-right">{{ noTitulosBondes }}</span></div>
-                <div class="col-3 col-result"><span class="label-resultado pull-right">{{ tasaBrutaBondes }}%</span></div>
+                <div class="col-4"><span class="label-calc pull-right">Bonddia:</span></div>
+                <div class="col-3 col-result"><span class="label-resultado pull-right">{{ noTitulosBonddia }}</span></div>
+                <div class="col-3 col-result"><span class="label-resultado pull-right">{{ tasaBrutaBonddia }}%</span></div>
               </div>
               <div class="line"></div>
               <br/>
 
               <div class="row row-cetes">
                 <div class="col-1"><img src="/calculadoras/images/question.png" alt="" data-toggle="tooltip" data-placement="right" title="Capital con el que se realiza la inversión inicial en cetes"/> </div>
-                <div class="col-6"><span class="label-calc pull-right">Inversión Cetes:</span></div>
+                <div class="col-6"><span class="label-calc pull-right">Inversion Cetes:</span></div>
                 <div class="col-4 col-result"><span class="label-resultado pull-right">$ {{ inversionCetes }}</span></div>
               </div>
               <div class="row row-cetes">
                 <div class="col-1"><img src="/calculadoras/images/question.png" alt="" data-toggle="tooltip" data-placement="right" title="Al no alcanzar para otro titulo en cetes, el remanente se invierte en el fondo diario Bonddia y genera intereses"/> </div>
-                <div class="col-6"><span class="label-calc pull-right">Inversión Bondes:</span></div>
-                <div class="col-4 col-result"><span class="label-resultado pull-right">$ {{ inversionBondes }}</span></div>
+                <div class="col-6"><span class="label-calc pull-right">Inversion Bonddia:</span></div>
+                <div class="col-4 col-result"><span class="label-resultado pull-right">$ {{ inversionBonddia }}</span></div>
               </div>
               <div class="row row-cetes">
                 <div class="col-1"><img src="/calculadoras/images/question.png" alt="" data-toggle="tooltip" data-placement="right" title="Intereses ganados antes de impuestos"/> </div>
-                <div class="col-6"><span class="label-calc pull-right">Interés Bruto:</span></div>
+                <div class="col-6"><span class="label-calc pull-right">Interes Bruto:</span></div>
                 <div class="col-4 col-result"><span class="label-resultado pull-right">$ {{ interesBruto }}</span></div>
               </div>
               <div class="row row-cetes">
@@ -126,53 +168,48 @@
               <br/>
 
               <div class="row row-cetes">
-                <div class="col-1"></div>
-                <div class="col-6"><span class="label-calc pull-right">Corte cupón:</span></div>
-                <div class="col-4 col-result"><span class="label-resultado pull-right">$ {{ corteCupon }}</span></div>
-              </div>
-              <div class="row row-cetes">
-                <div class="col-1"></div>
-                <div class="col-6"><span class="label-calc pull-right">Impuesto CC:</span></div>
-                <div class="col-4 col-result"><span class="label-calc-bold pull-right">$ {{ impuesteCorteCupon }}</span></div>
-              </div>
-              <div class="row row-cetes">
-                <div class="col-1"></div>
-                <div class="col-6"><span class="label-calc pull-right">Monto Bonddia:</span></div>
-                <div class="col-4 col-result"><span class="label-resultado pull-right">$ {{ montoBonddia }}</span></div>
-              </div>
-              <div class="row row-cetes">
-                <div class="col-1"></div>
-                <div class="col-6"><span class="label-calc pull-right">Remanentes:</span></div>
-                <div class="col-4 col-result"><span class="label-resultado pull-right">$ {{ remanentes }}</span></div>
+                <div class="col-1"><img src="/calculadoras/images/white.png" alt="" data-toggle="tooltip" data-placement="right" title="Es el capital final que incluye los intereses ganados y el remanente de la inversón menos el ISR"/> </div>
+                <div class="col-6" id="titulo_normal"><span class="label-calc pull-right">Monto total:</span></div>
+                <div class="col-6" id="titulo_comparar"><span class="label-obtienes-final pull-right">Obtienes al final:</span></div>
+
+              <div class="col-4 col-result"><span class="label-resultado pull-right">$ {{ montoTotal }}</span></div>
               </div>
 
-              <div class="line"></div>
-              <br/>
-              <div class="row row-cetes">
-                <div class="col-1"><img src="/calculadoras/images/question.png" alt="" data-toggle="tooltip" data-placement="right" title="Es el capital final que incluye los intereses ganados y el remanente de la inversión menos el ISR"/> </div>
-                <div class="col-6"><span class="label-calc pull-right">Monto total:</span></div>
-                <div class="col-4 col-result"><span class="label-resultado pull-right">$ {{ montoTotal }}</span></div>
-              </div>
             </div>
-          </div>
-          <input id="buttonGraficar" style="display: none; margin-bottom: 15px; margin-top: 15px;" type="button" name="" value="Graficar" class="button btn-primary" v-on:click="graficar"/>
+
+
+        </div>
+
+
+
+        <div class="row row-eq-height" style="margin-bottom: 3rem; margin-top: 1rem; display:none;" id="div-graficar">
+            <div class="col-1">
+              <input id="buttonGraficar" type="button" name=""  data-toggle="modal" value="Graficar" class="button btn-primary" v-on:click="graficar"/>
+            </div>
+
+            <div class="col pull-bottom">
+              <label class="option block">
+                Los resultados reflejan un escenario tomando la última tasa conocida por lo que éstos rendimientos no garantizan rendimientos futuros.
+              </label>
+            </div>
+        </div>
+
         </div>
       </div>
     </div>
 
     <div class="modal fade" id="modalGrafica" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog" role="document">
+
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">BONDES</h5>
+            <h5 class="modal-title" id="exampleModalLongTitle">CETES</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            <div id="chart" class="chart">
-
-            </div>
+            <div id="chart" class="chart"></div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -187,63 +224,71 @@
   <script src="/calculadoras/js/util.js" charset="utf-8"></script>
   <script src="/calculadoras/js/vue.js" charset="utf-8"></script>
   <script src="/calculadoras/js/highcharts.js" charset="utf-8"></script>
-  <script src="/calculadoras/js/bondes.js" charset="utf-8"></script>
+  <script src="/calculadoras/js/cetes.js" charset="utf-8"></script>
 
   <script src="/calculadoras/js/index.js" charset="utf-8"></script>
 
-  <script >
-      (function($, undefined) {
 
-  	"use strict";
+<script >
+(function($, undefined) {
 
-  	// When ready.
-  	$(function() {
+"use strict";
 
-  		var $form = $( "#form-bondes" );
-  	//	var $input = $form.find( "monto" );
-      var $input = $("input[name=monto]");
+// When ready.
+$(function() {
 
-  		$input.on( "keyup", function( event ) {
+var $form = $( "#form-cetes" );
+//	var $input = $form.find( "monto" );
+var $input = $("input[name=monto]");
 
-
-  			// When user select text in the document, also abort.
-  			var selection = window.getSelection().toString();
-  			if ( selection !== '' ) {
-  				return;
-  			}
-
-  			// When the arrow keys are pressed, abort.
-  			if ( $.inArray( event.keyCode, [38,40,37,39] ) !== -1 ) {
-  				return;
-  			}
+$input.on( "keyup", function( event ) {
 
 
-  			var $this = $( this );
+  // When user select text in the document, also abort.
+  var selection = window.getSelection().toString();
+  if ( selection !== '' ) {
+    return;
+  }
 
-  			// Get the value.
-  			var input = $this.val();
-
-  			var input = input.replace(/[\D\s\._\-]+/g, "");
-  					input = input ? parseInt( input, 10 ) : 0;
-
-  					$this.val( function() {
-  						return ( input === 0 ) ? "" : input.toLocaleString( "en-US" );
-  					} );
-  		} );
+  // When the arrow keys are pressed, abort.
+  if ( $.inArray( event.keyCode, [38,40,37,39] ) !== -1 ) {
+    return;
+  }
 
 
+  var $this = $( this );
 
-  	});
-  })(jQuery);
+  // Get the value.
+  var input = $this.val();
 
-  $('#myPills a').click(function (e) {
+  var input = input.replace(/[\D\s\._\-]+/g, "");
+      input = input ? parseInt( input, 10 ) : 0;
 
-    var url = $(this).attr("href");
-    //$(this).load(url);
-    window.location.replace(url);
+      $this.val( function() {
+        return ( input === 0 ) ? "" : input.toLocaleString( "en-US" );
+      } );
+} );
 
 
-  });
-     </script>
 
+});
+})(jQuery);
+
+$('#myPills a').click(function (e) {
+
+  var url = $(this).attr("href");
+  //$(this).load(url);
+  window.location.replace(url);
+
+
+});
+
+
+
+//$('#cetes').load('/calculadoras/cetes');
+//$('#bondes').load('/calculadoras/bondes');
+//$('#bonos').load('/calculadoras/bonos');
+
+
+   </script>
 </html>
