Se agregan css para movil

--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -631,7 +631,7 @@
 
     <div class="row smart-forms">
 
-      <div class="col-2 seccion">
+      <div class="col seccion">
         <form style="margin-top: 20px;" id="form-cetes-mobil">
           <div class="spacer-b30">
             <div class="tagline" style="">
@@ -705,7 +705,7 @@
         </div>
 
         <div class="row">
-          <div style="display:none;" id="resultMobil" class="col-3 resultado-calc-div">
+          <div style="display:none; max-width: 100%;" id="resultMobil" class="resultado-calc-div">
 
             <div class="row row-cetes">
               <div class="col-6"><span class="label-resultado">Monto invertido:</span></div>
