--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -673,7 +673,7 @@
       <div class="col seccion">
 
         <div class="row" id="titulo28_mobil" style="display:none">
-          <div class="col-3 resultado-calc-div">
+          <div class="col resultado-calc-div">
             <div class="div-titulos">
               <span class="titulos-comparar">CETES 28</span>
              </div>
@@ -681,7 +681,7 @@
         </div>
 
         <div class="row" id="titulo91_mobil" style="display:none">
-          <div class="col-3 resultado-calc-div">
+          <div class="col resultado-calc-div">
             <div class="div-titulos">
               <span class="titulos-comparar">CETES 91</span>
              </div>
@@ -689,7 +689,7 @@
         </div>
 
         <div class="row" id="titulo182_mobil" style="display:none">
-          <div class="col-3 resultado-calc-div">
+          <div class="col resultado-calc-div">
             <div class="div-titulos">
               <span class="titulos-comparar">CETES 182</span>
              </div>
@@ -697,7 +697,7 @@
         </div>
 
         <div class="row" id="titulo360_mobil" style="display:none">
-          <div class="col-3 resultado-calc-div">
+          <div class="col resultado-calc-div">
             <div class="div-titulos">
               <span class="titulos-comparar">CETES 360</span>
              </div>
