--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -672,32 +672,32 @@
 
       <div class="col seccion">
 
-        <div class="row" id="titulo28_mobil" style="display:none">
-          <div class="col resultado-calc-div">
+        <div class="row" id="titulo28_mobil" style="display:none;">
+          <div class="col resultado-calc-div" style="max-width: 100%;">
             <div class="div-titulos">
               <span class="titulos-comparar">CETES 28</span>
              </div>
           </div>
         </div>
 
-        <div class="row" id="titulo91_mobil" style="display:none">
-          <div class="col resultado-calc-div">
+        <div class="row" id="titulo91_mobil" style="display:none;">
+          <div class="col resultado-calc-div" style="max-width: 100%;">
             <div class="div-titulos">
               <span class="titulos-comparar">CETES 91</span>
              </div>
           </div>
         </div>
 
-        <div class="row" id="titulo182_mobil" style="display:none">
-          <div class="col resultado-calc-div">
+        <div class="row" id="titulo182_mobil" style="display:none;">
+          <div class="col resultado-calc-div" style="max-width: 100%;">
             <div class="div-titulos">
               <span class="titulos-comparar">CETES 182</span>
              </div>
           </div>
         </div>
 
-        <div class="row" id="titulo360_mobil" style="display:none">
-          <div class="col resultado-calc-div">
+        <div class="row" id="titulo360_mobil" style="display:none;">
+          <div class="col resultado-calc-div" style="max-width: 100%;">
             <div class="div-titulos">
               <span class="titulos-comparar">CETES 360</span>
              </div>
