fix al margin top

--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -627,7 +627,7 @@
 
   <div class="mobileHide">
 
-  <div class="container-fluid" style="margin-top:60px">
+  <div class="container-fluid">
 
     <div class="row smart-forms">
 
